--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -7,7 +7,10 @@
     </head>
     <body>
         <div>
-            <h1>{% block myhdg %}Hello {{ request.user }} {% endblock %}</h1>
+            <h1>{% if request.user.is_anonymous %}
+                {% else %}
+                    {% block myhdg %} Hello {{ request.user }} {% endblock %}
+                {% endif %}</h1>
             {% block body_block %}*** {% endblock %}
         </div>
         <hr />
