--- a/myapp/templates/myapp/login.html
+++ b/myapp/templates/myapp/login.html
@@ -3,11 +3,15 @@
     <title>Login Page</title>
 </head>
 <body>
+    {% if message %}
+        {{ message }}<br><br>
+    {% endif %}
     <form id="Login_form" action="{% url 'myapp:login' %}" method="post">
         {% csrf_token %}
         Username:<input type="text" name="username" placeholder="Enter Username"/>
         <br>
         Password:<input type="password" name="password" placeholder="Enter Password"/>
+        <br>
         <input type="submit" name="submit2" value="Login" />
     </form>
 </body>
