1)Create myorders view. Define a view function myorders(request) in your views.py file. The user must be logged in to access this function. For a logged in user: if the user is a Student, return all the orders that have been placed by the user; otherwise, display a message: ‘You are not a registered student!’. Update myapp/urls.py appropriately and create myorders.html to display the orders that have been placed by the student or a suitable message (if the student has not placed any orders). 2) Update the user_login view created in Lab 10 so that if an user who is not logged in goes to url ‘/myapp/ myaccount/’ they will be directed to the login page and after successful login they will go directly to the ‘/myapp/ myaccount/’ page (instead of the main index page). Note: The myaccount view function was created in lab 10. 3) Update base.html so that if a user is logged in, it will display Logout (myapp/logout) link. Otherwise it will display Register Here (myapp/register) and Login (myapp/login) links. Each link should go to the corresponding view function defined earlier (in Lab 10 or in step 3 above). 4) Update base.html so that if a user is logged in, it will display “Hello <first_name>” instead of “Hello User”. Here <first_name> is the first name of the user that is currently logged in
Aditional feaures
1) . In admin.py create a class StudentAdmin(admin.ModelAdmin), register this with the admin site and show the first_name, last_name, level fields and list of registered_courses for each student in the admin interface page that lists all studets.
2)ReviewAdmin in admin.py added list_display to show reviwer, course,rating and fields 'reviewer', ('course', 'rating', 'date'), 'comments' in different lines
3) Update the views.review function (created in lab 9) so that only users who are logged in and are either a ‘Undergraduate’ student or ‘Postgraduate’ student can submit a review

--- a/myapp/templates/myapp/login.html
+++ b/myapp/templates/myapp/login.html
@@ -6,12 +6,10 @@
     {% if message %}
         {{ message }}<br><br>
     {% endif %}
+    <h3>Please Login!</h3>
     <form id="Login_form" action="{% url 'myapp:login' %}" method="post">
         {% csrf_token %}
-        Username:<input type="text" name="username" placeholder="Enter Username"/>
-        <br>
-        Password:<input type="password" name="password" placeholder="Enter Password"/>
-        <br>
+        {{ form.as_p }}
         <input type="submit" name="submit2" value="Login" />
     </form>
 </body>
