--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -9,17 +9,24 @@
         <div>
             <h1>{% if request.user.is_anonymous %}
                 {% else %}
-                    {% block myhdg %} Hello {{ request.user }} {% endblock %}
+                    {% block myhdg %} Hello {{ request.user.first_name }} {% endblock %}
                 {% endif %}</h1>
             {% block body_block %}*** {% endblock %}
         </div>
         <hr />
         <div>
-        	<ul>
+            <ul>
                 <li class="hbar1"><a href="{% url 'myapp:index' %}">Main Page</a></li>
                 <li class="hbar1"><a href="{% url 'myapp:my_account' %}">My account</a></li>
                 <li class="hbar1"><a href="{% url 'myapp:about' %}">Find out about this site</a></li>
                 <li class="hbar1"><a href="{% url 'myapp:findcourses' %}">Find Courses Offered</a></li>
+                <li class="hbar1"><a href="{% url 'myapp:myorders' %}">MyOrders</a></li>
+                {% if request.user.is_anonymous %}
+                    <a href="{% url 'myapp:login' %}">Login</a> &emsp;
+                    <a href="{% url 'myapp:register' %}">Register</a>
+                {% else %}
+                    <a href="{% url 'myapp:logout' %}">Logout</a><br>
+                {% endif %}
             </ul>
         </div>
     </body>
