changes in UI changes in data shown 4) Add validators for price field in Course model so that it is between $50 and $500
5) Update the views.review function (created in lab 9) so that only users who are logged in and are either a ‘Undergraduate’ student or ‘Postgraduate’ student can submit a review.

6) “ python manage.py dumpdata --indent=1 > mydb.json “  dumpdata code in terminal
	Save db in JSON format. working on Load initial data using fixtures

--- a/myapp/templates/myapp/login.html
+++ b/myapp/templates/myapp/login.html
@@ -1,18 +1,24 @@
-<html>
-<head>
-    <title>Login Page</title>
-</head>
-<body>
-    {% if message %}
-        {{ message }}<br><br>
-    {% endif %}
-    <h3>Please Login!</h3>
-    <form id="Login_form" action="{% url 'myapp:login' %}" method="post">
+{% extends 'myapp/base.html' %}
+
+{% block body_block %}
+<div class="mai">
+    <center>
+    <h1>Login Here!</h1>
+    <form action="{% url 'myapp:login' %}" method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="submit2" value="Login" />
+        <table>
+            <tr>
+                <td>Username</td>
+                <td>{{ form.username }}</td>
+            </tr>
+            <tr>
+                <td>Password</td>
+                <td>{{ form.password }}</td>
+            </tr>
+        </table>
+        <a href="myapp/resetpassword.html" class="link">Forgot Password</a><br><br>
+        <input type="submit" name="submit1" value="Login" />
     </form>
-</body>
-</html>
-
-
+    </center>
+</div>
+{% endblock %}
