--- a/myapp/templates/myapp/detail.html
+++ b/myapp/templates/myapp/detail.html
@@ -1,16 +1,18 @@
 {% extends 'myapp/base.html' %}
 {% block title %}
-APP Detail page
+    Details Page
 {% endblock %}
-
 {% block body_block %}
-    <h2><b>{{ topic.name }} <br>Length: {{ topic.length }} </b></h2>
-    <p>List of available courses:</p>
+
+
+    <div class="main_body">
+    <center>
+    <h1 class="sub-head"><b>{{ topic.name }} &emsp; Length: {{ topic.length }} </b></h1></center>
+    <h1><b>List of available courses:</b></h1>
     <ol>
-        {% for course in course_list %}
-            <li>{{ course.title }}</li>
-        {% endfor %}
+    {% for course in course_list %}
+        <li class="cstyle">{{ course.title }}</li>
+    {% endfor %}
     </ol>
-
-
+    </div>
 {% endblock %}
