--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -1,13 +1,14 @@
 {% extends 'myapp/base.html' %}
 {% block title %}
-Welcome!
+    Welcome!
 {% endblock %}
 {% block body_block %}
+    <div class="main_body">
     {% if top_list %}
-        <h2>List of Topics</h2>
+        <h1 class="heading">List of Topics</h1>
         <ol>
             {% for top  in top_list %}
-                <li> <a href="/myapp/{{ top.id }}">{{ top.name }}</a> </li>
+                <li class="cstyle"><a href="/myapp/{{  top.id }}"> {{ top.name}} </a></li>
             {% endfor %}
         </ol>
     {% else %}
@@ -18,7 +19,7 @@ Welcome!
     {% else %}
         <p>Your last login was more than one hour ago!</p>
     {% endif %}
-    <a href="{% url 'myapp:place_order' %}">Place Order</a>&emsp;
-    <a href="{% url 'myapp:review' %}">Review a Course</a>&emsp;
-
+    <p><a href="{% url 'myapp:place_order' %}">Place Order</a> &emsp;
+        <a href="{% url 'myapp:review' %}">Review</a></p><br>
+    </div>
 {% endblock %}
