--- a/myapp/templates/myapp/order_response.html
+++ b/myapp/templates/myapp/order_response.html
@@ -1,6 +1,7 @@
 {% extends 'myapp/base.html' %}
 
 {% block body_block %}
+    <div class="main_body">
       {% if courses %}
 
         <h2>List of Courses:</h2>
@@ -11,4 +12,5 @@
             {% endfor %}
         </ol>
     {% endif %}
+    </div>
 {% endblock %}
