--- a/myapp/templates/myapp/results.html
+++ b/myapp/templates/myapp/results.html
@@ -1,9 +1,9 @@
 {% extends 'myapp/base.html' %}
-{% block myhdg %}
-    <h1>Hello {{ name }}</h1>
-{% endblock %}
+
 {% block body_block %}
+    <div class="main_body">
     {%  for course in courselist %}
         <li> {{ course }} &emsp; {{course.topic}}</li>
     {% endfor %}
+    </div>
 {% endblock %}
